...
            <objects>
                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
                    <window key="window" title="JSON to Swift Converter Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
...
                                            <rect key="frame" x="9" y="54" width="38" height="18"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                            <buttonCell key="cell" type="radio" title="let" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="zut-ze-XDo">
                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                <font key="font" metaFont="system"/>
...
                                            <rect key="frame" x="9" y="32" width="41" height="18"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                            <buttonCell key="cell" type="radio" title="var" bezelStyle="regularSquare" imagePosition="left" alignment="left" tag="1" inset="2" id="Hzj-yL-GXG">
                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                <font key="font" metaFont="system"/>
...
                                            <rect key="frame" x="8" y="54" width="66" height="18"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                            <buttonCell key="cell" type="radio" title="Explicit" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="zOO-DE-EMC">
                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                <font key="font" metaFont="system"/>
...
                                            <rect key="frame" x="8" y="32" width="84" height="18"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                            <buttonCell key="cell" type="radio" title="? Optional" bezelStyle="regularSquare" imagePosition="left" alignment="left" tag="1" inset="2" id="e7l-46-uda">
                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                <font key="font" metaFont="system"/>
...
                                            <rect key="frame" x="8" y="10" width="84" height="18"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                            <buttonCell key="cell" type="radio" title="! Required" bezelStyle="regularSquare" imagePosition="left" alignment="left" tag="2" inset="2" id="PrD-PD-oOI">
                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                <font key="font" metaFont="system"/>
...
                                            <rect key="frame" x="8" y="5" width="305" height="192"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                            <textFieldCell key="cell" controlSize="mini" sendsActionOnEndEditing="YES" id="hkO-Cn-H1D" userLabel="outputStaticText">
                                                <font key="font" metaFont="fixedUser" size="11"/>
                                                <string key="title">let userName: String
...
                                <rect key="frame" x="18" y="206" width="135" height="18"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="check" title="Add default values" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="5AN-g4-Rmk">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
...
                                <rect key="frame" x="18" y="172" width="125" height="18"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="check" title="Support Codable" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="QZQ-Rn-Vj3">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
...
